@@ -10,6 +10,8 @@ grub-installer (1.12) UNRELEASED; urgency=low
     potential future users of grub-installer in contexts such as live CDs.
   * Remove now-incorrect README, which wasn't exactly very useful to start
     with.
+  * Split update_mtab and is_floppy functions out to functions.sh so that
+    they can be reused by rescue scripts.
 
  -- Christian Perrier <bubulle@debian.org>  Wed, 16 Nov 2005 22:42:29 +0100
 
